--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+    <title>Lance_Henderson professional badass extraordinar.</title>
+</head>
+<body>
+    Exotic things with exotic people. He has single handily brought down nation states,
+    and created armies. It is said that he has even inserted a USB connector
+    on the first try. He is a master of intrigue and espionage, liture, and specific
+    oversized firearms, that happens to always be in the worst possible situation,
+    and save the day.
+</body>
+</html>
