--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Lance_Henderson professional badass extraordinar.</title>
 </head>
+<h1>
+  Bio of the most important man on Earth.
+<h1>
 <body>
     Exotic things with exotic people. He has single handily brought down nation states,
     and created armies. It is said that he has even inserted a USB connector
@@ -10,4 +13,18 @@
     oversized firearms, that happens to always be in the worst possible situation,
     and save the day.
 </body>
+<p>
+<a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>
+     Most definatly not Rick Astley
+<P> 
+</a>
+<h2>
+  List of awsome activities, christened by Lance Hendersons precence.
+<h2>
+<ul>
+  <li>Sky Diving</li>
+  <li>Bowling with Roman and cousin Niko</li>
+  <li>Drinking inhuman amounts of alcohol</li>
+<img src=Nicolas_Cage.jpg />
+
 </html>
