--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Lance_Henderson professional badass extraordinar.</title>
 </head>
+ <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+</head> 
 <h1>
   Bio of the most important man on Earth.
 <h1>
