--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   <li>Sky Diving</li>
   <li>Bowling with Roman and cousin Niko</li>
   <li>Drinking inhuman amounts of alcohol</li>
+<script>
+var fontType = [ "Arial", "Verdana", "Helvetica"];
+var num;
+num=Math.floor(Math.random()*3);
+document.getElementById("fontfamily").src=fontType[num];
+</script>    
 <img src=Nicolas_Cage.jpg />
-
 </html>
