--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Lance_Henderson professional badass extraordinar.</title>
 </head>
  <head>
