--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li>
                                 <a href="full-width.html">Full Width Page</a>
                             </li>
                             <li>
                                 <a href="sidebar.html">Sidebar Page</a>
                             </li>
                             <li>
+                              <li>
                                 <a href="faq.html">FAQ</a>
                             </li>
                             <li>
@@ -164,7 +164,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Modern Business
+                    Welcome Modern_Bullshit_Business_Site
                 </h1>
             </div>
             <div class="col-md-4">
